--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,8 @@
-# Canonicalise to www
-[[redirects]]
-from = "https://homeorg.com.au/*"
-to = "https://www.homeorg.com.au/:splat"
-status = 301
-force = true
+[build]
+  command = "npm run build"
+  publish = "dist"
 
-# HSTS — cautious, covers the apex; don't use includeSubDomains yet
-[[headers]]
-for = "/*"
-  [headers.values]
-  Strict-Transport-Security = "max-age=15552000"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
