--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.0",
+    "astro": "^5.13.8",
+    "cookie": "^1.0.2",
+    "googleapis": "^160.0.0",
     "lucide-astro": "^0.540.0",
-    "nodemailer": "^7.0.5"
+    "luxon": "^3.5.0",
+    "nodemailer": "^7.0.5",
+    "open": "^10.2.0"
   }
 }
