--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "astro": "^5.13.8",
     "cookie": "^1.0.2",
+    "formidable": "^3.5.4",
     "googleapis": "^160.0.0",
     "lucide-astro": "^0.540.0",
     "luxon": "^3.7.2",
